@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-07-25T01:06:34Z",
-  "count_outdated" : 105,
-  "uniques_outdated" : 87,
-  "count" : 106,
-  "uniques" : 88,
+  "timestamp" : "2025-08-15T01:04:25Z",
+  "count_outdated" : 106,
+  "uniques_outdated" : 88,
+  "count" : 107,
+  "uniques" : 89,
   "clones" : [
     {
-      "timestamp": "2025-07-24T00:00:00Z",
+      "timestamp": "2025-08-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
